...
  ~ GNU General Public License for more details.
  -->

<resources>

    <!-- General -->
    <string name="preferences">Options</string>
    <string name="settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="training">Training</string>
    <string name="bow">Bow</string>
    <string name="arrow">Arrow</string>
    <string name="round">Round</string>
    <string name="points">Points</string>
    <string name="passe">End</string>

    <!-- Overview -->
    <string name="new_training">New training</string>
...
        <item quantity="one">%d end selected</item>
        <item quantity="other">%d ends selected</item>
    </plurals>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="statistic">Statistic</string>

    <!-- Share -->
    <string name="share">Share</string>
    <string name="dispersion_pattern">Dispersion pattern</string>
    <string name="sharing_failed">Sharing failed!</string>

    <!-- Export -->
    <string name="send_exported">Send exported data</string>
    <string name="exporting_failed">Exporting failed!</string>

    <!-- New bow -->
    <string name="add_bow">Add bow</string>
    <string name="name">Name</string>
    <string name="bow_type">Bow type</string>
    <string name="properties">Properties</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="height">Brace height</string>
...
    <string name="sight_settings">Sight settings</string>
    <string name="add">Add</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_from_gallery">Select a picture from gallery</string>

    <!-- New arrow -->
    <string name="add_arrow">Add arrow</string>
    <string name="length">Length</string>
    <string name="spine">Spine</string>
    <string name="weight">Weight</string>
    <string name="vanes">Vanes</string>
    <string name="nock">Nock</string>
    <string name="material">Material</string>
...
        <item quantity="other">%d arrows</item>
    </plurals>

    <string name="target_face">Target face</string>

    <!-- Scoreboard -->
    <string name="scoreboard">Scoreboard</string>
    <string name="arrows">Arrows</string>
    <string name="sum">Score</string>
    <string name="carry">R.Total</string>
    <string name="action_print">Print</string>
    <string name="average">Average</string>

...

    <string name="date">Date</string>
    <string name="edit_round">Edit round</string>
    <string name="draw_weight">Draw weight</string>
    <string name="sight">Sight</string>
    <string name="limbs">Limbs</string>
    <string name="my_bow">My bow</string>
    <string name="my_arrow">My arrow</string>
    <string name="tip_weight">Tip weight</string>
    <string name="arrow_ranking">Arrow ranking</string>
    <string name="arrow_x_of_set_of_arrows">Arrow %1$s of %2$s</string>
    <string name="display">Display</string>
    <string name="print">Print</string>
    <string name="table">Table</string>
...
    <string name="show_total_score">Show total score</string>
    <string name="show_percentage">Show percentage</string>
    <string name="show_arrow_average">Show arrow average</string>
    <string name="image_deleted">Image deleted</string>
    <string name="delete_image">Delete image?</string>
    <string name="keyboard_type">Keyboard type</string>
    <string name="keyboard_enabled">Keyboard enabled</string>
    <string name="sort_shots">Sort shots</string>
    <string name="sort_shots_for_spots">Sort shots for spot target faces</string>
    <string name="target_captain">Target captain</string>
    <string name="language">Language</string>
    <string name="warning_backup_experimental">Warning: This feature is still experimental! Please check in regular intervals if the backup was really successful!</string>
    <string name="drawer_open">Open drawer</string>
...
