...
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="90dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp">

            <TextView
                android:id="@+id/fab1Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fab_label_background"
                android:text="@string/free_training"
                android:textColor="@color/white"
...
            app:backgroundTint="#4CAF50"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_trending_up_white_24dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:borderWidth="0dp"
            app:srcCompat="@drawable/ic_add_white_24dp"/>
...
